debug UCIEngine